joplin/manifests/joplin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin
  namespace: joplin
  labels:
    app.kubernetes.io/name: joplin
    app.kubernetes.io/component: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: joplin
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: joplin
        app.kubernetes.io/component: server
    spec:
      containers:
        - name: joplin
          image: joplin/server:3.7.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: saml-config
              mountPath: /saml
              readOnly: true
          ports:
            - name: http
              containerPort: 22300
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 384Mi
            limits:
              memory: 2Gi
      volumes:
        - name: saml-config
          configMap:
            name: joplin-saml-config
