joplin/manifests/joplin/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: joplin
  namespace: joplin
  labels:
    app.kubernetes.io/name: joplin
    app.kubernetes.io/component: server
spec:
  selector:
    app.kubernetes.io/name: joplin
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 22300
      targetPort: http
